<resources>
    <string name="app_name">NotifyTec</string>

    <!-- Strings related to login -->
    <string name="edLogin">Login</string>
    <string name="edSenha">Senha</string>
    <string name="btnLogin">LOGIN</string>
    <string name="btnEsqueciSenha">ESQUECI A SENHA</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_login">Login inválido</string>
    <string name="error_invalid_senha">Senha inválida</string>
    <string name="error_invalid_autenticacao">Login e/ou senha inválidos</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="error_cpf_invalid">CPF inválido</string>
    <string name="error_RA_CPF_invalido">R.A. ou CPF inválido</string>
    <string name="error_token_invalid">Token inválido</string>
    <string name="error_senhas_diferentes">Senhas diferentes</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="btnProximoPasso">PRÓXIMO PASSO</string>
    <string name="edRA_CPF">R.A ou CPF</string>

    <string name="btnAlterarSenha">ALTERAR SENHA</string>
    <string name="btnVoltar">VOLTAR</string>
    <string name="edAltSenha_Token">Token</string>
    <string name="edNova_Senha">Nova Senha</string>
    <string name="edConfNova_Senha">Confirmar Nova Senha</string>

    <string name="btnConfirmar">CONFIRMAR</string>

    <string name="txtInfoFirstAcess">Primeiro acesso ao APP. Por favor, informe uma senha para substituir a padrão</string>
    <string name="txtInfoToken">Informe o token recebido por e-mail e a nova senha</string>
    <string name="title_activity_menu_principal">Menu Principal</string>
    <string name="title_activity_menu_principal_NotifyNaoLidas">Notificações Não Lidas</string>
    <string name="title_activity_menu_principal_avisoAluno">Avisos Recebidos</string>
    <string name="title_activity_menu_principal_enqueteAluno">Enquetes Recebidas</string>
    <string name="title_activity_menu_principal_avisoProf">Avisos Enviados</string>
    <string name="title_activity_menu_principal_enqueteProf">Enquetes Enviadas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_novo_notificacao">Nova Notificação</string>

    <string name="novaNot_titulo">Título</string>
    <string name="novaNot_descri">Descrição</string>
    <string name="novaNot_curso">Curso</string>
    <string name="novaNot_periodo">Período</string>
    <string name="novaNot_expira">Expira em</string>
    <string name="novaNot_opcao">Opção</string>
    <string name="txtNovaOpcEnquete">*Use opção para criar enquetes</string>
    <string name="error_NewEnqueteFieldRequiredOpc">Informe uma opção</string>


    <string-array name="curso_array">
        <item>ADS - Tarde</item>
        <item>ADS - Noite</item>
        <item>PI</item>
        <item>Agro</item>
        <item>SI</item>
    </string-array>

    <string-array name="periodo_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>


    <string name="NovasNotifi_texto">Pressione sobre uma notificação para marcá-la como lida e enviar sua resposta</string>

    <string name="testTagAux"></string>
    <string name="testTagIdBinaryNotificacaoOpcao"></string>

</resources>
