<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/gray_principal"
    tools:context="com.notifytec.TrocarSenha">

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="720dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2.0"
        android:src="@drawable/ic_principal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtInfoToken"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginBottom="15dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/edToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edAltSenha_Token"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/edNova_Senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edNova_Senha"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/edNova_Senha2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edConfNova_Senha"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnAlterarSenha"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:background="@color/red_principal"
        android:text="@string/btnAlterarSenha"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnVoltar"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray_principal"
        android:text="@string/btnVoltar"
        android:textColor="@color/red_principal"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>
