<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_principal"
    android:orientation="vertical"
    android:padding="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NovaNotificacao"
    tools:showIn="@layout/activity_novo_notificacao">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="70dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/novaNot_titulo"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edDescri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/novaNot_descri"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Curso"
                android:textSize="18sp"
                android:paddingLeft="4dp"/>
            
            <Spinner
                android:id="@+id/spCurso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/novaNot_curso"
                android:imeOptions="actionNext"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Período"
                android:textSize="18sp"
                android:paddingLeft="4dp"/>

            <Spinner
                android:id="@+id/spPeriodo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/novaNot_periodo"
                android:imeOptions="actionNext"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edExpiraEm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/novaNot_expira"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:text="@string/txtNovaOpcEnquete" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edOpcao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:imeOptions="actionGo"
                        android:singleLine="true"
                        android:hint="@string/novaNot_opcao" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5">

                    <ImageButton
                        android:id="@+id/btnAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/gray_principal"
                        android:paddingTop="20dp"
                        android:src="@drawable/ic_plus_circle_outline" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_opcoes"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scrollbars="vertical"
                android:visibility="visible" >
            </android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>